# Cis550-Final-Project

./: .gitignore  package-lock.json
backend/: .gitignore  README.md  pyproject.toml
backend/backend/: main.py
backend/backend/config/: config.py
backend/backend/db/: database.py
backend/backend/models/: models.py  schemas.py
backend/backend/routes/: general_router.py  router.py  user_router.py
backend/scraping/: sec_sp500_scrape.py  yahoo_sp500_scrape.py
frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/api/company/: route.ts
frontend/app/complex/: carousel-query-display.tsx  page.tsx  query-popup.tsx  results-display.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/app/search/: page.tsx  result-card.tsx  search-bar.tsx  search-criterion.tsx
frontend/app/simple/: carousel-options.tsx  carousel-query-display.tsx  page.tsx
frontend/components/: menubar.tsx
frontend/components/ui/: CompanyDetails.tsx  auth-layout.tsx
frontend/types/: next-auth.d.ts
frontend/utils/: api.ts
